[FIX]: validator and sanitizer added to atuh
